// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`With \`batman project\` initialized on server Completion request returns all angle-bracket components with same name from different namespaces 1`] = `
Array [
  Object {
    "detail": "component",
    "kind": 7,
    "label": "AnotherAwesomeComponent",
    "textEdit": Object {
      "newText": "AnotherAwesomeComponent",
      "range": Object {
        "end": Object {
          "character": 1,
          "line": 0,
        },
        "start": Object {
          "character": 1,
          "line": 0,
        },
      },
    },
  },
  Object {
    "detail": "component",
    "kind": 7,
    "label": "MyAwesomeComponent",
    "textEdit": Object {
      "newText": "MyAwesomeComponent",
      "range": Object {
        "end": Object {
          "character": 1,
          "line": 0,
        },
        "start": Object {
          "character": 1,
          "line": 0,
        },
      },
    },
  },
  Object {
    "detail": "component",
    "kind": 7,
    "label": "Nested::NestedComponent",
    "textEdit": Object {
      "newText": "Nested::NestedComponent",
      "range": Object {
        "end": Object {
          "character": 1,
          "line": 0,
        },
        "start": Object {
          "character": 1,
          "line": 0,
        },
      },
    },
  },
  Object {
    "detail": "component",
    "kind": 7,
    "label": "Boo$Bar",
    "textEdit": Object {
      "newText": "Boo$Bar",
      "range": Object {
        "end": Object {
          "character": 1,
          "line": 0,
        },
        "start": Object {
          "character": 1,
          "line": 0,
        },
      },
    },
  },
  Object {
    "detail": "component",
    "kind": 7,
    "label": "Foo$Bar",
    "textEdit": Object {
      "newText": "Foo$Bar",
      "range": Object {
        "end": Object {
          "character": 1,
          "line": 0,
        },
        "start": Object {
          "character": 1,
          "line": 0,
        },
      },
    },
  },
]
`;

exports[`With \`batman project\` initialized on server Completion request returns all angle-bracket in a element expression for in repo addons with batman syntax 1`] = `
Array [
  Object {
    "detail": "component",
    "kind": 7,
    "label": "Foo$Bar",
    "textEdit": Object {
      "newText": "Foo$Bar",
      "range": Object {
        "end": Object {
          "character": 2,
          "line": 1,
        },
        "start": Object {
          "character": 1,
          "line": 1,
        },
      },
    },
  },
]
`;

exports[`With \`batman project\` initialized on server Definition request return proper component location from batman syntax component name 1`] = `
Array [
  Object {
    "range": Object {
      "end": Object {
        "character": 0,
        "line": 0,
      },
      "start": Object {
        "character": 0,
        "line": 0,
      },
    },
    "uri": "/lib/boo/addon/templates/components/bar.hbs",
  },
]
`;

exports[`With \`batman project\` initialized on server return proper import location from in-repo addon 1`] = `
Array [
  Object {
    "range": Object {
      "end": Object {
        "character": 0,
        "line": 0,
      },
      "start": Object {
        "character": 0,
        "line": 0,
      },
    },
    "uri": "/lib/foo/addon/components/bar.js",
  },
]
`;
